# par-beatdown

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml
data/: my_neighbors_kid_is_an_internet_addict.md
docs/: music-test.md  native-paranimator-timeline.md  paranimator-adapter.md  tracker-file.md  vamp-plug-ins.md
libs/: CMakeLists.txt
libs/ParBeatDownCore/: CMakeLists.txt  TrackerTimeline.cpp  Version.cpp  version.cpp
libs/ParBeatDownCore/include/ParBeatDownCore/: version.h
libs/ParBeatDownCore/include/ParBeatdown/: TrackerTimeline.h  Version.h
schemas/: beat-keys-merged-animation.schema.json  beat-keys-overlay.schema.json  beat-keys.schema.json  tracker-timeline.schema.json
tests/: CMakeLists.txt
tests/ParBeatDownCore/: CMakeLists.txt  test.cpp
tests/beat-keys/: CMakeLists.txt  ValidateBeatKeys.cmake  ValidateBeatKeysMerge.cmake  ValidateToolFailure.cmake  adapter.beat-keys.json  base-id-conflict-animation.json  base-merge-animation.json  gold-merge-event-overlay.json  gold-merge-rms-overlay.json  gold-write-empty-overlay.json  gold-write-note-pulses.json  gold-write-peak-keyframes.json  gold-write-rms-keyframes.json  gold-write-row-pulses.json  invalid-event-source.beat-keys.json  invalid-source.beat-keys.json  invalid-version.beat-keys.json  merge-event.beat-keys.json  merge-rms.beat-keys.json  note-pulses.beat-keys.json  peak.beat-keys.json  rms.beat-keys.json  row-pulses.beat-keys.json  timeline-events.json
tests/music2keyframes/: CMakeLists.txt  ValidateMusic2Keyframes.cmake  ValidateToolFailure.cmake  adapter.music2keyframes.json  base-animation.json  gold-write-empty-overlay.json  gold-write-peak-keyframes.json  gold-write-rms-keyframes.json  invalid-schema.music2keyframes.json  invalid-source.music2keyframes.json  invalid-version.music2keyframes.json  peak.music2keyframes.json  rms.music2keyframes.json  timeline-features.json
tests/par-beatdown/: CMakeLists.txt  ValidateToolFailure.cmake  ValidateTrackerTimeline.cmake  gold-write-custom-feature-hop.json  gold-write-custom-fps.json  gold-write-feature-frames.json  gold-write-module-structure.json  gold-write-pattern-events.json  gold-write-sync-offset.json  gold-write-timeline-clock.json  gold-write-timeline-custom-fps.json  gold-write-tracker-timeline.json  gold-write-windowed-features.json  gold-write-windowed-timeline.json  invalid-tracker.txt
tools/: CMakeLists.txt
tools/beat-keys/: CMakeLists.txt  main.cpp
tools/music2keyframes/: CMakeLists.txt  main.cpp
tools/par-beatdown/: CMakeLists.txt  main.cpp
vcpkg-ports/sonic-annotator/: portfile.cmake  usage  vcpkg.json
